# CPP-OOP-Final-Test

./: CMakeLists.txt  CMakeLists.txt.in  README.md  main.cpp
Store/: Goods.cpp  Goods.h  GoodsSupplies.cpp  GoodsSupplies.h  Store.cpp  Store.h  Supply.cpp  Supply.h
Store/Date/: Date.cpp  Date.h  TimeDelta.cpp  TimeDelta.h  month_utils.cpp  month_utils.h
Store/DateTime/: Date.cpp  Date.h  DateTime.cpp  DateTime.h
Store/Headers/: ExpiredGoodsExcluder.h  Goods.h  GoodsShelf.h  GoodsSupplies.h  GoodsSupply.h  Store.h  StoreExceptions.h  Supply.h  date_utils.h
Store/Impls/: ExpiredGoodsExcluder.cpp  Goods.cpp  GoodsShelf.cpp  GoodsSupply.cpp  Store.cpp  StoreExceptions.cpp  Supply.cpp  date_utils.cpp
Store/Purchasing/: CashRegister.cpp  CashRegister.h  Discount.cpp  Discount.h  Discounter.cpp  Discounter.h  Purchase.cpp  Purchase.h  PurchaseItem.h
Store/Purchasing/Headers/: CashRegister.h  Discount.h  Discounter.h
Test/: date_test.cpp  goods_shelf_test.cpp  goods_supplies_test.cpp  include_exclude_test.cpp  purchasing_test.cpp  store_test.cpp  test.cpp  test_utils.cpp
Test/Headers/: date_test.h  goods_shelf_test.h  goods_supplies_test.h  include_exclude_test.h  purchasing_test.h  store_test.h  test.h  test_utils.h
Trapezium/: CurvedTrapezium.cpp  LinearFunc.cpp  LinearTrapezium.cpp  Segment1D.cpp  Trapezium.h  trapezium_utils.cpp
Trapezium/Headers/: CurvedTrapezium.h  LinearFunc.h  LinearTrapezium.h  Segment1D.h  Trapezium.h  trapezium_utils.h
